# LAB3

./: CPP1.cpp  CPP2.cpp  CPP3.cpp  CPP4.cpp  CPP5.cpp  Python1.py  Python2.py  Python3.py  Python4.py  Python5.py  README.md  ~$-421_ПОКОЧУЕВ_МВ_ЛР3.docx
C++/: .clang-tidy  CMakeLists.txt  array.cpp  array.h  benchmark.cpp  coverage_report.array.cpp.991818480b5bbb6b95febfcb6a96d9a0.html  coverage_report.doubly_list.cpp.3ab67d63bc06b5c38e516ca375d4ad92.html  coverage_report.doubly_list.h.f31f8e138fd712df2efa5a6f52476f92.html  coverage_report.forward_list.cpp.b768e666daa565f8ca2bc6ae88874e51.html  coverage_report.forward_list.h.e819c6650bf8386f4e2b0fd6adb8bddd.html  coverage_report.functions.html  coverage_report.hash_table.cpp.e0f786bdf70f0674652ec3a4bcd7988e.html  coverage_report.hash_table.h.e8436cdb3e82523065bd572e7d66ea06.html  coverage_report.html  coverage_report.queue.cpp.b697b9a2c1972da3f98352e49f2a5bf0.html  coverage_report.queue.h.704cd01c1ebdd01526ce0db5d42f45f8.html  coverage_report.stack.cpp.ad36857d82783f205d56d2478b3bbcb1.html  coverage_report.stack.h.c206b86f36e7fc5a837a800b550e6781.html  coverage_report.tree.cpp.3d0a3bbcb500e2ad26a450ecf2895231.html  coverage_report.tree.h.7410b00b507591b55c4bd7475dadb384.html  doubly_list.cpp  doubly_list.h  forward_list.cpp  forward_list.h  hash_table.cpp  hash_table.h  queue.cpp  queue.h  stack.cpp  stack.h  tree.cpp  tree.h
C++/GoogleTest/: test_array.cpp  test_doubly_list.cpp  test_forward_list.cpp  test_hash_table.cpp  test_queue.cpp  test_stack.cpp  test_tree.cpp
datastructures-go/: Makefile  array.go  array_test.go  benchmark_test.go  coverage.html  coverage.out  doubly_list.go  doubly_list_test.go  forward_list.go  forward_list_test.go  go.mod  hash_table.go  hash_table_test.go  queue.go  queue_test.go  stack.go  stack_test.go  tree.go  tree_test.go
datastructures-go/cmd/coverage/: main.go
